# uva-cv1-lab5

./: .gitignore  .pre-commit-config.yaml  CV1 Final Lab Pt1.ipynb  CV1 Final Lab Pt2.ipynb  Makefile  README.md  environment_part2.yml  pyproject.toml  sweep_lenet5.yaml  sweep_lenet5_finetune.yaml  sweep_lenet5deep_finetune.yaml  sweep_twolayer.yaml  train.py  train_finetune_sweep.py  train_new.py  train_sweep.py  train_twolayer.py
config/datasets/: cifar10.yaml  cifar100.yaml  stl10.yaml
notebooks/: CV1 Final Lab Pt1.ipynb  CV1 Final Lab Pt1_LATEST_Changes.ipynb  CV1 Final Lab Pt2.ipynb
scripts/: download_stl10.py
src/datasets/: cifar10.py  cifar100.py  dataloaders.py  stl10.py  trainsformations.py
src/models/: _base.py  lenet5.py  twolayer.py  vision_model.py
src/trainer/: trainer.py
src/training/: early_stopper.py  evaluator.py  trainer.py
src/utils/: lab1_utils.py  visualizations.py  wandb.py
test/: test_lenet5_base.py  test_twolayernet.py
