[tool.poetry]
name = "uva-cv1-lab5"
version = "0.1.0"
description = ""
packages = [
    { include = "src" },
]
authors = ["dqmis <dom.seputis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
torch = "^2.1.0"
torchvision = "^0.16.0"
matplotlib = "^3.8.0"
wandb = "^0.15.12"
scikit-learn = "^1.3.1"
imageio = "^2.31.5"
opencv-python = "^4.8.1.78"
omegaconf = "^2.3.0"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.9.1"}
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
ipython = "^8.16.1"
pre-commit = "^3.4.0"
ipykernel = "^6.25.2"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | condaenv
  | *.ipynb
)/
'''
max_line_length = 99
max-complexity = 18


[tool.black]
line-length = 99
preview = true
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | condaenv
)/
'''

[tool.isort]
profile = "black"
line_length = 99
